--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-table": "^8.20.5",
+    "@tinymce/tinymce-react": "^5.1.1",
+    "@uppy/core": "^4.2.2",
+    "@uppy/dashboard": "^4.1.1",
+    "@uppy/drag-drop": "^4.0.3",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.0",
@@ -22,6 +26,7 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-stars": "^2.2.5",
     "sweetalert2": "^11.14.2",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.3",
