--- a/.env
+++ b/.env
@@ -3,3 +3,8 @@ NEXT_PUBLIC_BACKEND_HOST = "http://127.0.0.1:8000"
 NEXT_PUBLIC_ASSETS_HOST = "http://127.0.0.1:8000/getFile"
 
 PROD_BACKEND_HOST = "https://heycow.my.id"
+
+# midtrans
+MIDTRANS_DEVELOPMENT=false
+MIDTRANS_SERVER_KEY=
+MIDTRANS_CLIENT_KEY=
