--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@nextui-org/modal": "^2.0.41",
+    "@nextui-org/radio": "^2.1.5",
+    "@nextui-org/select": "^2.2.7",
+    "@nextui-org/table": "^2.0.40",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
