--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@nextui-org/modal": "^2.0.41",
     "@nextui-org/radio": "^2.1.5",
+    "@nextui-org/react": "^2.4.8",
     "@nextui-org/select": "^2.2.7",
     "@nextui-org/table": "^2.0.40",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-table": "^8.20.5",
     "@tinymce/tinymce-react": "^5.1.1",
