Push terbaru di rumah reks

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_BACKEND_HOST = "http://127.0.0.1:8000"
+NEXT_PUBLIC_BACKEND_HOST = "https://heycow.my.id"
 
 NEXT_PUBLIC_ASSETS_HOST = "http://127.0.0.1:8000/getFile"
 
