--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "heycow-frontend": "file:",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.452.0",
     "next": "14.2.15",
     "react": "^18",
