Push complete, cuma landing

--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@uppy/core": "^4.2.2",
     "@uppy/dashboard": "^4.1.1",
     "@uppy/drag-drop": "^4.0.3",
+    "aos": "^2.3.4",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dropify": "^0.2.2",
     "heycow-frontend": "file:",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.452.0",
